--- a/style.css
+++ b/style.css
@@ -4,24 +4,24 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.logo-matrix {
+.logo {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.logo-matrix-img {
+.logo-img {
   width: 100%;
 }
-.logo-matrix-info {
+.logo-info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.logo-matrix { text-align: center;
+.logo { text-align: center;
 }
 }
-.main-page {
+.content  {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -58,7 +58,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for="new-task"] {
+label[for="task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -84,11 +84,11 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+label[for="task"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+input#task {
   width: 318px;
 }
 p > button:hover {
@@ -134,7 +134,7 @@ button.delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#completed label {
   text-decoration: line-through
   color: #888;
 }
@@ -144,11 +144,11 @@ ul li input[type="text"] {
   display:none
 }
 
-ul li.edit-mode input[type="text"] {
+ul li.edit input[type="text"] {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+ul li.edit label {
   display:none;
 }
