--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -53,12 +53,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.edit-btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="task"] {
+.title,
+.create-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -67,7 +67,7 @@ label[for="task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.text-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,24 +79,24 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.text-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="task"] {
+.create-label {
   display: block;
   margin: 0 0 20px;
 }
-input#task {
+#task {
   width: 318px;
 }
-p > button:hover {
+.create-btn:hover {
   color: #0fc57c;
 }
 
 /* Task list */
-li {
+.item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -105,50 +105,50 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.item {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.checkbox-input {
   margin: 0 10px;
 }
-li > label {
+.task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.item > .text-input {
   width: 226px
 }
-li > button.delete:hover {
+.delete:hover {
   color: #cf2323;
 }
-button.delete img {
+.remove {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.remove:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed label {
+#completed .task {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.list .text-input {
   display:none
 }
 
-ul li.edit input[type="text"] {
+.list .edit .text-input {
   display:inline-block;
   width:224px
 }
 
-ul li.edit label {
+.list .edit .task {
   display:none;
 }
