refactor: adjust CSS (semicolons) according to rule 3.7 in html-and-css

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -103,7 +103,6 @@ button {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -122,7 +121,7 @@ button {
   width: 226px;
 }
 .item > .text-input {
-  width: 226px
+  width: 226px;
 }
 .delete:hover {
   color: #cf2323;
@@ -138,18 +137,18 @@ button {
 
 /* Completed */
 #completed .task {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list .text-input {
-  display: none
+  display: none;
 }
 
 .list .edit .text-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .list .edit .task {
