--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
   display: block;
   text-align: right;
 }
-.logo-img {
+.logo__img {
   width: 100%;
 }
-.logo-info {
+.logo__nfo {
   font-family: fantasy, cursive;
 }
 
@@ -63,7 +63,7 @@ button {
 }
 /* Heading */
 .title,
-.create-label {
+.create__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -89,19 +89,19 @@ button {
 }
 
 /* New Task */
-.create-label {
+.create__label {
   display: block;
   margin: 0 0 20px;
 }
 #task {
   width: 318px;
 }
-.create-btn:hover {
+.create__btn:hover {
   color: #0fc57c;
 }
 
 /* Task list */
-.item {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -109,7 +109,7 @@ button {
   justify-content: space-between;
   align-items: center;
 }
-.item {
+.list__item {
   vertical-align: middle;
 }
 
@@ -122,7 +122,7 @@ button {
   font-size: 18px;
   width: 226px;
 }
-.item > .text-input {
+.list__item > .text-input {
   width: 226px;
 }
 .delete:hover {
